<resources>
    <string name="app_name">My Word Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wordListTitle">Words</string>
    <string name="learnedWordsTitle">Learned Words</string>

    <string name="word">word</string>
    <string name="learned">Learned</string>
    <string name="unLearned">UnLearned</string>
    <string name="searchHint">Search a word</string>

    <string name="notFound">The relevant word could not be found.</string>
    <string name="nothing">You haven\'t learned any words yet.</string>

    <string name="addWordTitle">Add New Word (* Required)</string>
    <string name="wordText">*English Word</string>
    <string name="translateTr">*Word in Turkish</string>
    <string name="translateFr">Word in French</string>
    <string name="pronounce">*Word English Pronounce</string>
    <string name="pronounceFr">Word French Pronounce</string>
    <string name="sentence">*English Sentence</string>
    <string name="sentenceTr">*Sentence in Turkish</string>
    <string name="sentenceFr">Sentence in French</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="difficulty">*Difficulty:</string>

    <string name="spaceFillPls">Please fill in all fields and rate the word!</string>
    <string name="somethingWrong">Someting wrong. Please try again later.</string>
</resources>